# gg

./: CHANGELOG.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  publish.yml
src/: App.svelte  GraphLine.svelte  GraphLog.svelte  LogPane.svelte  RevisionPane.svelte  global.css  main.ts
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/src/: main.rs  menu.rs
src-tauri/src/messages/: mutations.rs
src-tauri/src/worker/: gui_util.rs  mutations.rs  queries.rs
src/controls/: ListWidget.svelte
src/messages/: MoveRevision.ts
src/mutators/: RevisionMutator.ts
src/shell/: Pane.svelte
