[package]
name = "gg"
version = "0.30.0"
description = "GG - Gui for JJ"
authors = ["Thomas Castiglione"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.4.1", features = ["config-toml"] }

[dev-dependencies]
tempfile = "3.23"
zip = "6.0"
assert_matches = "1.5"

[dependencies]
tauri = { version = "2.8.5", features = ["config-toml"] }
tauri-codegen = "2.4"
tauri-macros = "2.4"
tauri-plugin = "2.4"
tauri-runtime = "2.8"
tauri-runtime-wry = "2.8.1"
tauri-utils = "2.7"
tauri-plugin-dialog = "2.4"
tauri-plugin-shell = "2.3.1"
tauri-plugin-window-state = "2.4"
tauri-plugin-log = "2.7"

jj-lib = { version = "0.33", features = ["watchman"] }
jj-cli = { version = "0.33", default-features = false, features = [
    "git",
] }

# deps shared with JJ, which we try to keep on the same version
anyhow = "1.0.93"
clap = { version = "4.5.20", features = [
    "derive",
    "deprecated",
    "wrap_help",
    "string",
] }
config = { version = "0.13.4", default-features = false, features = ["toml"] }
dirs = "5.0.1"
dunce = "1.0.5"
itertools = "0.14"
indexmap = "2.6"
gix = { version = "0.73", default-features = false, features = [
    "attributes",
    "blob-diff",
    "index",
    "max-performance-safe",
    "zlib-rs",
] }
pollster = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
toml_edit = { version = "0.23.5", features = ["serde"] }
thiserror = "1.0.68"
tokio = { version = "1.47.1", features = ["io-util"] }

# deps used by JJ but with different features
chrono = { version = "0.4.38", features = ["serde"] }
git2 = { version = "0.20.1", features = ["vendored-libgit2"] }

# extra deps not used by JJ
log = "0.4"
futures-util = "0.3.30"
ts-rs = { version = "7.1.1", features = ["chrono-impl"], optional = true }

[target."cfg(windows)".dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
] }

[profile.release]
lto = true
codegen-units = 1
